-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.1
-
None
-
Vista x64
QMAKE: win32-msvc2010 doesn't convert ampersand "&" characters to "&" in vcxproj
I have QMAKE_POST_LINK build steps that use ampersand "&" for command concatenation. qmake -spec win32-msvc2008 converts "&" to "&" in the output vcproj file, which works great, but qmake -spec win32-msvc2010 leaves them as "&" in the output vcxproj file which causes VS2010 to complain. If I specify "&" qmake works for vs2010, but then my vs2008 projects end up with bad "&" strings in it
Reprpoducible steps
Reproducible Steps:
1. In examples/qmake/tutorial create a hello.pro with the following instructions:
TEMPLATE = vcapp
DESTDIR=build
SOURCES += hello.cpp
win32 {
QMAKE_POST_LINK +=copy $$[QT_INSTALL_BINS]
QtCore4.dll $${DESTDIR} &
QMAKE_POST_LINK +=copy $$[QT_INSTALL_BINS]
QtGui4.dll $${DESTDIR}
}
2. Run qmake -spec win32-msvc2010
The resulting vcxproj is created without converting "&" to "&"
I don't have a preference how win32-msvc2010 and win32-msvc2008 behave, just that they behave the same, so either they should both convert "&" to "&" or neither of them should.