qmake vcxproj generator: fix XML conversion for build events

Task-number: QTBUG-20419

Change-Id: I52069e0beb2b39ec4a67e83de583efd2926c6611
Reviewed-on: http://codereview.qt-project.org/4484
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@nokia.com>